Try to fix console command on iphone

--- a/src/components/_consoleCommand.scss
+++ b/src/components/_consoleCommand.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 20rem;
 
-  background-color: #0c0c0c;
+  //background-color: #0c0c0c;
 
   border-top-left-radius: 0.6rem;
   border-top-right-radius: 0.6rem;
@@ -17,7 +17,7 @@
     justify-content: space-between;
     align-items: center;
 
-    background-color: #333333;
+    //background-color: #333333;
 
     &--tab {
       display: flex;
@@ -25,7 +25,7 @@
       border-top-right-radius: 0.4rem;
 
       padding: 5px 15px 0 15px;
-      background-color: #0c0c0c;
+      //background-color: #0c0c0c;
     }
   }
 }
